--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-fastify",
   "version": "1.0.0",
   "description": "",
+  "type": "commonjs",
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^6.6.0",
@@ -20,6 +21,7 @@
     "fast-redact": "^3.5.0",
     "fast-uri": "^3.0.6",
     "fastify": "^5.3.0",
+    "fastify-metrics": "^12.1.0",
     "fastq": "^1.19.1",
     "find-my-way": "^9.3.0",
     "ipaddr.js": "^2.2.0",
@@ -48,7 +50,8 @@
     "toad-cache": "^3.7.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
