--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "better-sqlite3": "^11.9.1",
     "cookie": "^1.0.2",
     "dequal": "^2.0.3",
+    "dotenv": "^16.5.0",
     "fast-decode-uri-component": "^1.0.1",
     "fast-deep-equal": "^3.1.3",
     "fast-json-stringify": "^6.0.1",
